fix: nav shifting and search buttons

--- a/sass/partials/_menu.scss
+++ b/sass/partials/_menu.scss
@@ -64,11 +64,13 @@ nav[role='navigation'] {
     @extend .alternate-font-family;
     @extend .uppercase;
     color:$base-text-color;
-    display:block;
+    display:inline-block;
     position:relative;
+    height:$nav-height;
+    line-height:$nav-height;
+    white-space: nowrap;
     width:195px;
     z-index:100;
-    height:$nav-height;
     border-right:1px solid #dddddd;
     background-color:$white;
     &:hover {
@@ -76,9 +78,12 @@ nav[role='navigation'] {
       color:$white;
     }
     .nav-title, + .nav-desc {
-      position:absolute;
       width:195px;
       z-index:1000;
+    }
+    .nav-desc {
+      @extend .position-absolute;
+      padding-top:40px;
     }
   }
   ul {position:relative;@extend .no-margin-or-padding;height:$nav-height;overflow:visible;}
@@ -106,7 +111,7 @@ nav[role='navigation'] {
     }
     &:hover {
       @extend .text-shadow-dark;
-      color:#fff;
+      color:$white;
       text-decoration:none;
       z-index:1000;
       height:137px;
@@ -117,6 +122,7 @@ nav[role='navigation'] {
         z-index:1001;
       }
     }
+    
     &.red-gradient:hover {
       @extend .light-red-gradient;
     }
@@ -176,8 +182,17 @@ li#search {
     right:0;
     background:transparent url('img/search.png') center center no-repeat;
     }
-    .nav-desc {top:85px;width:95%;}
+    .nav-desc {@extend .position-absolute;top:85px;width:95%;}
   input[type="search"] {width:80%;font-size:12px;}
+}
+.nav-desc.nav-search {
+  input[type="search"] {width:75%;margin-left:-40px;}
+  .go {
+    position:absolute;
+    right:10px;
+    bottom:40px;
+  }
+  
 }
 .footer-navigation {
   li {
