--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -16,7 +16,7 @@ $base-font-size: 14px !default;
 $base-line-height: $baseline-rhythm * 4 !default;
 
 $base-font-family: Georgia, serif !default;
-$alternate-font-family: "HelveticaNeue-CondensedBold", "Helvetica Neue", Arial, sans-serif !default;
+$alternate-font-family: "HelveticaNeue-CondensedBold", "Open Sans Condensed", Arial, sans-serif !default;
 $alternate-font-family2: "Helvetica Neue", Arial, sans-serif !default;
 $button-font-family: 'IM Fell Great Primer SC', serif;
 $header-font-family: 'IM Fell Great Primer SC', serif;
